@@ -1,1 +1,1 @@
-{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304102338","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","comment":"Removed state as a location field","uri":"content://com.llamalab.automate.provider/flows/22/data"}
+{"name":"transactions","blurb":"Flow to run financial transactions.","version":"202304102349","configPath":"/storage/emulated/0/Process/automate/4a Transactions/","writePath":"/storage/emulated/0/Data/finances/transactions/sessions/","primaryFile":"/storage/emulated/0/Data/finances/transactions/primary.json","typeFolder":"/storage/emulated/0/Process/automate/4a Transactions/typelists/","recurringTransactions":"/storage/emulated/0/Data/finances/transactions/recurring.json","comment":"Fixes for screen alignment","uri":"content://com.llamalab.automate.provider/flows/22/data"}
